# msp430-serial-rs

./: .gitignore  Cargo.toml  README.md  SETUP-debian-aarch64.md
.cargo/: config
src/: main.rs
