[package]
authors = ["Nathan Vander Wilt <nate@calftrail.com>"]
edition = "2018"
readme = "README.md"
name = "msp430-serial-demo"
version = "0.1.0"

[dependencies]
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }
msp430-rt = "0.4.0"
panic-msp430 = "0.4.0"
msp430f5529 = { git = "https://github.com/cr1901/msp430f5529", branch="rt-up-v0.4.0", features = ["rt", "critical-section"] }


# see https://github.com/cr1901/msp430f5529-quickstart for details
[profile.release]
opt-level = "s"
codegen-units = 1
lto = "fat"
